syntax = "proto3";

option go_package = "github.com/ex8/tipon/users/pb";

package pb;

service UserService {
    rpc FindOneUser(FindOneUserReq) returns (FindOneUserRes) {}
    rpc CreateUser(CreateUserReq) returns (CreateUserRes) {}
    rpc UpdateUser(UpdateUserReq) returns (UpdateUserRes) {}
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
    string address = 4;
}

message FindOneUserReq {
    string id = 1;
}

message FindOneUserRes {
    User user = 1;
}

message CreateUserReq {
    User user = 1;
}

message CreateUserRes {
    User user = 1;
}

message UpdateUserReq {
    User user = 1;
}

message UpdateUserRes {
    User user = 1;
}